
  * Add monitor module
    - Bring a system in which register memory space to print or draw them later.

  * Add asynclock module
    - This module allow the user to register function call request for a specific
      time or pace.

  * Edit shader module
    - Bring automatically generated normal map shader with custom amount of lights.
    - Add the spreading color shader effect.

  * Edit collision module
    - Bring dot-dot collision.
    - Bring rectangle-dot collision.
    - Bring quad-dot collision.
    - Bring rectangle-rectangle collision.
    - Bring triangle-dot collision.
    - Bring triangle-circle collision.
    - Bring circle-circle collision.
    - Bring circle-dot collision.
    - Bring equation-dot collision.
    - Bring equation-equation collision.
    - Bring quad-equation collision.
    - Bring quad-quad collision.
    - Bring rectangle-equation collision.
    - Bring triangle-equation collision.
    - Bring triangle-quad collision.
    - Bring triangle-rectangle collision.
    - Bring triangle-triangle collision.
    - Bring circle-equation collision.
    - Bring circle-quad collision.
    - Bring circle-rectangle collision.
    - Bring circle-line collision.

  * Edit misc module
    - Add bunny_reach function.
    - Add support for base64.
    - Use the environment parameter in bunny_evaluate.

 -- Jason Brillante <damdoshi@hotmail.com>  Tue, 12 March 2018 12:00:00 +0100

liblapin-dev (1.11) stable; urgency=low

  * Add a text module that can handle png font and real font and act as textbox.
    Based on clipable.
  * Add a configuration module that can load and save in different formats and
    handle all the same way
  * Handle INI format
  * Handle DABSIC format
  * Add bunny_read_ini and bunny_write_ini to read and write from and to memory instead of file
  * Add bunny_ini_count_field
  * Deprecate bunny_ini module, use bunny_configuration instead now
  * Add network related events